--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          push: false
-          tags: test/app:latest
+          push: true
+          tags: testcomany/app:latest
