--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,18 @@
-name: ci
-
+name: Publish Docker image
 on:
-  push:
-    branches: main
-
+  release:
+    types: [published]
 jobs:
-  build-and-publish-head:
+  push_to_registry:
+    name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
-    # Running this job only for develop branch
-
     steps:
-    - uses: actions/checkout@v2 # Checking out the repo
-
-    - name: Build and Publish head Docker image
-      uses: VaultVulp/gp-docker-action@1.1.7
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }} # Provide GITHUB_TOKEN to login into the GitHub Packages
-        image-name: test-service # Provide Docker image name
-        extract-git-tag: true
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          repository: pankajpreet/testimage
+          tag_with_ref: true
